fixing alignment

--- a/src/components/componentsCSS/AddIrangaForm.css
+++ b/src/components/componentsCSS/AddIrangaForm.css
@@ -43,7 +43,7 @@ select {
     text-align: center;
     font-family: "Inknut Antiqua", serif;
     width: 80%;
-    max-width: 300px;
+    max-width: 400px;
     padding: 3px 0;
     margin-bottom: 15px;
     border: 1px solid #ced4da; 
