--- a/src/components/componentsCSS/Drafts.css
+++ b/src/components/componentsCSS/Drafts.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 80%;
+    width: 100%;
 }
 
 .drafts {
